<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <string name="app_name">SimpleDiet</string>
    <string name="title_activity_settings">Settings</string>

    <string name="cheat_score_description">Select a cheat score that measures how much of a cheat meal this was. The higher the score, the worse it is for you.</string>
    <string name="cheat_description_template">Your current diet plan has you having X serves of food per day. At this level you are having Y cheats per serve of food.</string>
    <string name="cheat_points_description">Cheat points determine how bad a meal is for you, between 0 and 3. The worse the meal, the more cheat points it costs. Typically 0 cheat points means it is just health food, 1 cheat point means it has 1 negative additive to it (eg. added salt, fried), 2 cheat points would have 2 or 3 negative additives, and 3 cheat points would mean it is more unhealthy than healthy (eg. ice cream). Choose an amount of cheat points you are allowed to have each day.</string>
    <string name="daily_cheat_points">Daily Cheat Points</string>
    <string name="default_daily_cheats">0</string>
    <string name="select_default_diet_explanation">Select a default diet plan from the list</string>
    <string name="personalise_diet_plan_title">Personalise your diet plan here</string>
    <string name="veges">Veges</string>
    <string name="meat">Meat</string>
    <string name="dairy">Dairy</string>
    <string name="grain">Grain</string>
    <string name="fruit">Fruit</string>
    <string name="default_title">Default Title</string>
    <string name="veges_default_counter">Veges:0</string>
    <string name="meat_default_counter">Meat:0</string>
    <string name="dairy_default_counter">Dairy:0</string>
    <string name="grain_default_counter">Grain:0</string>
    <string name="fruit_default_counter">Fruit:0</string>
    <string name="daily_liquid_intake_explanation">Set your daily liquid intake. It is suggested to have at least 10 serves of water, and no more that 4 serves of caffeine and alcohol one any one day.</string>
    <string name="daily_water">Daily Water</string>
    <string name="daily_caffeine">Daily Caffeine</string>
    <string name="daily_alcohol">Daily Alcohol</string>
    <string name="recommended_caffeine_alcohol">For long term benefits, it is recommended to have less than 14 serves of caffeine, and 10 standards of alcohol per week.</string>
    <string name="weekly_caffeine">Weekly Caffeine</string>
    <string name="weekly_alcohol">Weekly Alcohol</string>
    <string name="default_header">Header</string>
    <string name="set_cheat_score">Set Cheat Score</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="image_description_food_group">Image depicting food group</string>
    <string name="plus_1">+1</string>
    <string name="plus_one_quarter">+¼</string>
    <string name="num_1_0">1.0</string>
    <string name="minus_one_quarter">-¼</string>
    <string name="minus_1">-1</string>
    <string name="plus_cup">+cup</string>
    <string name="plus_shot">+shot</string>
    <string name="num_250">250</string>
    <string name="ml">mL</string>
    <string name="minus_shot">-shot</string>
    <string name="minus_cup">-cup</string>
    <string name="up_arrow">up arrow</string>
    <string name="down_arrow">down arrow</string>
    <string name="current_volume_ml">current volume: 250mL</string>
    <string name="num_4">4</string>
    <string name="percent_symbol">%</string>
    <string name="drink">Drink</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tap_to_add_serves_to_your_drink">Tap to add the base liquid to your drink (anything not dairy based is considered water)</string>
    <string name="water_slash_other">Water/ Other</string>
    <string name="milk">Milk</string>
    <string name="tap_to_add_additions_to_your_drink">Tap to add additions to your drink</string>
    <string name="caffeine">Caffeine</string>
    <string name="alcohol">Alcohol</string>
    <string name="hydration_factor">Hydration Factor</string>
    <string name="default_hydration_factor">water+milk-caffiene-alcohol</string>
    <string name="meal">Meal</string>
    <string name="tap_a_food_group_to_add_serves">Tap a food group to add serves</string>
    <string name="default_date">dd-MMM-yyyy</string>
    <string name="weekly_cheat_points">Weekly Cheat Points</string>
    <string name="weekly_cheat_automatic_value_explanation">Weekly cheats are automatically set to 7 times your daily cheats. You can customise them here to minimise your weeekly cheat count</string>

    <string name="achievement_food_complete_text">Congratulations! Today\'s food completed!</string>
    <string name="achievement_yesterday_food_complete_text">Congratulations! Yesterday\'s food completed!</string>
    <string name="achievement_hydration_complete_text">Congratulations! Today\'s hydration completed!</string>
    <string name="achievement_over_cheats_text">Oh No! You have had too many cheats today!</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_28_days">Last 28 days</string>
    <string name="completed_text">Done!</string>
    <string name="water">Water</string>
    <string name="protein">Protein</string>
</resources>
