<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="200dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center">
        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/food_group_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/symbol_water_completed"
            android:rotation="270"
            android:contentDescription="@string/image_description_food_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/one_serve_explanation"
        android:text="@string/serve_water"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/add_serves"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <Button
            android:id="@+id/add_one_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/plus_cup"
            android:padding="1dp"
            android:contentDescription="@string/up_arrow" />

        <Button
            android:id="@+id/add_one_quarter_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_shot"
            android:layout_weight="1"
            android:padding="1dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:contentDescription="@string/up_arrow" />


        <EditText
            android:id="@+id/number_of_serves"
            android:text="@string/num_250"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


        <Button
            android:id="@+id/minus_one_quarter_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_shot"
            android:layout_weight="1"
            android:padding="1dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:contentDescription="@string/down_arrow" />


        <Button
            android:id="@+id/minus_one_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_cup"
            android:layout_weight="1"
            android:padding="1dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:contentDescription="@string/down_arrow" />

    </LinearLayout>
</LinearLayout>