<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
        android:id="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/default_title"
        android:textSize="15sp"
        style="@style/TextAppearance.AppCompat.Title"/>

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/veges_diet_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veges_default_counter"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/meat_diet_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meat_default_counter"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/dairy_diet_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dairy_default_counter"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/grain_diet_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grain_default_counter"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/fruit_diet_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fruit_default_counter"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />
</androidx.constraintlayout.widget.ConstraintLayout>