<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="200dp"
    android:baselineAligned="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_gravity="center">
        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/food_group_picture"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/alcohol"
            app:layout_constraintBaseline_toBaselineOf="@+id/one_serve_explanation"
            android:contentDescription="@string/image_description_food_group" />

            <TextView
                android:id="@+id/one_serve_explanation"
                android:text="@string/serve_alcohol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/food_group_picture"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/percentage_values"
                app:layout_constraintTop_toBottomOf="@+id/one_serve_explanation"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/current_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_volume_ml"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/alcohol_percent"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="@string/num_4"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent_symbol"/>

            </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/minus_one_percent"
            app:layout_constraintTop_toBottomOf="@+id/percentage_values"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_remove_black_48dp"
            android:scaleType="centerInside"/>

        <SeekBar
            app:layout_constraintTop_toBottomOf="@id/percentage_values"
            app:layout_constraintStart_toEndOf="@id/minus_one_percent"
            app:layout_constraintEnd_toStartOf="@id/add_one_percent"
            android:id="@+id/alcohol_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:progress="4"
            android:max="100"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/add_one_percent"
            app:layout_constraintTop_toBottomOf="@+id/percentage_values"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_add_black_48dp"
            android:scaleType="centerInside"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/add_serves"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/add_one_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_weight="1"
            android:padding="1dp"
            android:contentDescription="@string/up_arrow" />

        <Button
            android:id="@+id/add_one_quarter_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_one_quarter"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_weight="1"
            android:padding="1dp"
            android:contentDescription="@string/up_arrow" />


        <EditText
            android:id="@+id/number_of_serves"
            android:text="@string/num_1_0"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/minus_one_quarter_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_one_quarter"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_weight="1"
            android:padding="1dp"
            android:contentDescription="@string/down_arrow" />

        <Button
            android:id="@+id/minus_one_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_weight="1"
            android:padding="1dp"
            android:contentDescription="@string/down_arrow" />

    </LinearLayout>
</LinearLayout>