<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_liquid_intake_explanation"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/water_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daily_water"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/daily_caffeine_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daily_caffeine"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/daily_alcohol_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daily_alcohol"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommended_caffeine_alcohol"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weekly_caffeine_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weekly_caffeine"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weekly_alcohol_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weekly_alcohol"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>